--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -1,5 +1,5 @@
 
-                        <div class="resume-contact col-12 col-md-6 col-lg-5 col-xl-4">
+                        <div class="resume-contact col col-12 col-md-6 col-lg-5 col-xl-4">
                             <ul class="list-unstyled mb-0">
                                 {{ range .Site.Params.contact.list }}
                                 <li class="mb-2"><i class="{{ .icon }} fa-fw fa-lg mr-2"></i><a class="resume-link" href="{{ .url | safeURL }}">{{ .text }}</a></li>
