--- a/layouts/partials/profile.html
+++ b/layouts/partials/profile.html
@@ -1,5 +1,5 @@
 
-                        <div class="resume-title col-12 col-md-6 col-lg-7 col-xl-8">
-                            <h2 class="resume-name mb-0"><span class="text-uppercase">{{ .Site.Params.profile.name }}</span><br><span class="text-uppercase">{{ .Site.Params.profile.surname }}</span>, {{ .Site.Params.profile.title }}</h2>
+                        <div class="resume-title col col-12 col-md-6 col-lg-7 col-xl-8">
+                            <h3 class="resume-name mb-0"><span class="text-uppercase">{{ .Site.Params.profile.name }} {{ .Site.Params.profile.surname }}</span>, {{ .Site.Params.profile.title }}</h2>
                             <div class="resume-tagline mb-3 mb-md-0">{{ .Site.Params.profile.tagline }}</div>
                         </div><!--//resume-title-->
