--- a/assets/scss/devresume.scss
+++ b/assets/scss/devresume.scss
@@ -139,7 +139,7 @@ a.resume-link {
 }
 
 .resume-intro {
-	font-size: 0.875rem;
+	font-size: 1rem;
 }
 .resume-main {
 	.item-title {
@@ -147,17 +147,17 @@ a.resume-link {
 	}
 
    .item-meta {
-	   font-size: 0.75rem;
+	   font-size: 0.8rem;
    }
    .item-content {
-		font-size: 0.875rem;
+		font-size: 0.9rem;
 	}
 }
 
 .resume-aside {
 	border-left: 1px solid rgba(0, 0, 0, 0.08);
 	.item {
-		font-size: 0.875rem;
+		font-size: 0.9rem;
 	}
 	.item-title {
 		font-size: 1rem;
@@ -202,6 +202,10 @@ a.resume-link {
 	.resume-contact {
 	    border-left: 0;
     }
+	.resume-name {
+		font-size: 1.7rem;
+		letter-spacing: 0.35rem;
+	}
 }
 
 
