--- a/layouts/partials/publications.html
+++ b/layouts/partials/publications.html
@@ -6,7 +6,8 @@
                                 {{ range .Site.Params.publications.list }}
                                 <div class="item mb-3">
                                     <div class="item-heading row align-items-center mb-2">
-                                        <h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">{{ .title }}<br>
+                                        <h4 class="item-title col-12 col-md-7 col-lg-10 mb-2 mb-md-0">{{ .title }}
+                                            <br>
                                             <span class="badge badge-secondary resume-publication-item"><a class="label label-default" href="{{ .Site.BaseURL }}/{{ .link }}"><i class="fa-solid fa-file-pdf"></i> Paper</a></span> 
                                             {{ if .slides }}
                                             <span class="badge badge-secondary resume-publication-item"><a class="label label-default" href={{ .slides }}><i class="fa-solid fa-file-pdf"></i> Slides</a></span>
@@ -18,7 +19,7 @@
                                             <span class="badge badge-secondary resume-publication-item"><a class="label label-default" href={{ .poster }}><i class="fa-solid fa-file-pdf"></i> Poster</a></span>
                                             {{ end }}
                                         </h4>
-                                        <div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right"><span class="label label-success">{{ .venue }}</span></div>
+                                        <div class="item-meta col-12 col-md-5 col-lg-2 text-muted text-left text-md-right"><span class="label label-success">{{ .venue }}</span></div>
                                     </div>
                                     <div class="item-content">
                                         <p><strong>{{ .authors }}</strong> <br> {{ .fullvenue }}</p>
