--- a/assets/scss/devresume.scss
+++ b/assets/scss/devresume.scss
@@ -136,9 +136,9 @@ a.resume-link {
 }
 
 .resume-profile-image {
-	max-width: 200px;
+	max-width: 250px;
 	margin-bottom: 20px;
-	border: 2px solid black;
+	border: 4px solid $theme-color-primary;
 }
 
 .resume-intro {
