--- a/layouts/partials/publications.html
+++ b/layouts/partials/publications.html
@@ -8,7 +8,7 @@
                                     <div class="item-heading row align-items-center mb-2">
                                         <h4 class="item-title col-12 col-md-7 col-lg-10 mb-2 mb-md-0">{{ .title }}
                                             <br>
-                                            <span class="badge badge-secondary resume-publication-item"><a class="label label-default" href="{{ .Site.BaseURL }}/{{ .link }}"><i class="fa-solid fa-file-pdf"></i> Paper</a></span> 
+                                            <span class="badge badge-secondary resume-publication-item"><a class="label label-default" href="{{ .link }}"><i class="fa-solid fa-file-pdf"></i> Paper</a></span> 
                                             {{ if .slides }}
                                             <span class="badge badge-secondary resume-publication-item"><a class="label label-default" href={{ .slides }}><i class="fa-solid fa-file-pdf"></i> Slides</a></span>
                                             {{ end }}
